# autoclick

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MyCustomsSlider.cpp  clicker.cpp  ghotkey.cpp  head.h  hotkey_registrar.cpp  hotkey_registrar.h  keyboard_monitor.cpp  keyboard_monitor.h  log.cpp  main.cpp  rangeSlider.cpp  ui.cpp
.cache/clangd/index/: MainWindow.cpp.C4E8D6EEF90B1A6D.idx  MyCustomsSlider.cpp.339816C249457A96.idx  clicker.cpp.081E2FC576D61D0B.idx  head.h.88453175583B9C51.idx  keyboard_monitor.cpp.3CC0DC362A2E9B2B.idx  keyboard_monitor.h.655A5F3A2FCE2E1A.idx  log.cpp.CE846FAC695BE266.idx  main.cpp.BAD5FFB2ED5E84A4.idx  ui.cpp.B94103D89A19C7E5.idx
.claude/: settings.local.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
myapp_autogen/: deps
